--- a/eli5_prompting.ipynb
+++ b/eli5_prompting.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompt Engineering in LangSmith"
+    "## Prompt Engineering en LangSmith"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import environment variables"
+    "### Importamos variables de entorno"
    ]
   },
   {
@@ -22,7 +22,6 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "\n",
     "load_dotenv(dotenv_path=\".env\", override=True)\n",
     "LANGSMITH_API_KEY = os.getenv(\"LANGSMITH_API_KEY\")"
    ]
@@ -31,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pull in Prompt from Prompthub"
+    "### Ejecutamos un Pull del Prompt desde Prompthub"
    ]
   },
   {
@@ -41,73 +40,39 @@
    "outputs": [],
    "source": [
     "from langsmith import Client\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langsmith.utils import LangSmithNotFoundError\n",
-    "\n",
     "client = Client(api_key=LANGSMITH_API_KEY)\n",
-    "\n",
-    "# Define the prompt template\n",
-    "eli5_prompt_template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"\"\"You are an expert at explaining complex topics in simple terms that a 5-year-old could understand. \n",
-    "\n",
-    "Your task is to take a complex question and context information, then provide a clear, simple explanation using:\n",
-    "- Simple words and concepts\n",
-    "- Analogies and examples from everyday life\n",
-    "- Short sentences\n",
-    "- Engaging and friendly tone\n",
-    "\n",
-    "Keep your explanation concise but complete.\n",
-    "\n",
-    "Question: {question}\n",
-    "\n",
-    "Context: {context}\n",
-    "\n",
-    "Please explain this in simple terms that a 5-year-old would understand:\n",
-    "\"\"\")])\n",
-    "\n",
-    "# Try to pull the prompt, if it doesn't exist, push it first\n",
-    "try:\n",
-    "    print(\"Trying to pull existing prompt...\")\n",
-    "    prompt = client.pull_prompt(\"eli5-concise\", include_model=True)\n",
-    "    print(\"✅ Successfully pulled existing prompt from LangSmith\")\n",
-    "except LangSmithNotFoundError:\n",
-    "    print(\"❌ Prompt not found. Creating and pushing new prompt...\")\n",
-    "    \n",
-    "    # Push the prompt to LangSmith\n",
-    "    client.push_prompt(\n",
-    "        \"eli5-concise\",\n",
-    "        object=eli5_prompt_template,\n",
-    "        description=\"A prompt for explaining complex topics in simple terms that a 5-year-old could understand\"\n",
-    "    )\n",
-    "    print(\"✅ Successfully pushed prompt to LangSmith\")\n",
-    "    \n",
-    "    # Now pull the prompt back\n",
-    "    prompt = client.pull_prompt(\"eli5-concise\", include_model=True)\n",
-    "    print(\"✅ Successfully pulled the newly created prompt\")"
+    "prompt = client.pull_prompt(\"eli5-profesor\", include_model=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup AI Application"
+    "### Setup Aplicación IA "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first setup our web search tool, as usual"
+    "Primero configuremos nuestra herramienta de búsqueda web, como siempre."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_55428\\632376592.py:3: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
+      "  web_search_tool = TavilySearchResults(max_results=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Initialize web search tool\n",
-    "\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
     "web_search_tool = TavilySearchResults(max_results=1)"
@@ -117,12 +82,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now create our application, same as in the tracing module. This time, our prompt is the one pulled from PromptHub"
+    "Ahora creemos nuestra aplicación, igual que en el módulo de trazas. Esta vez, nuestro prompt es el que se obtuvo desde PromptHub.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +95,7 @@
     "from langsmith import traceable\n",
     "from langsmith.wrappers import wrap_openai\n",
     "\n",
-    "# Create Application\n",
+    "# Creamos la aplicación\n",
     "openai_client = wrap_openai(OpenAI())\n",
     "\n",
     "@traceable\n",
@@ -141,16 +106,19 @@
     "    \n",
     "@traceable\n",
     "def explain(question, context):\n",
-    "    # Format the prompt with the question and context\n",
-    "    messages = prompt.format_messages(question=question, context=context)\n",
-    "    \n",
-    "    # Call the OpenAI API with the formatted messages\n",
+    "    prompt_inputs = {\"question\": question, \"context\": context}\n",
+    "    messages = prompt.invoke(prompt_inputs)\n",
+    "    messages = [{\"role\": messages.type, \"content\": messages.content}]\n",
+    "    # Mapea los roles a los valores válidos de OpenAI\n",
+    "    role_map = {\"ai\": \"assistant\", \"human\": \"user\"}\n",
+    "    for msg in messages:\n",
+    "        if msg[\"role\"] in role_map:\n",
+    "            msg[\"role\"] = role_map[msg[\"role\"]]\n",
     "    response = openai_client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
-    "        messages=[{\"role\": msg.type, \"content\": msg.content} for msg in messages],\n",
+    "        messages=messages,\n",
     "        temperature=0.7\n",
     "    )\n",
-    "    \n",
     "    return response.choices[0].message.content\n",
     "\n",
     "@traceable\n",
@@ -169,11 +137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sergi\\Documents\\langsmith\\eli5\\.venv\\Lib\\site-packages\\pydantic\\v1\\main.py:1054: UserWarning: LangSmith now uses UUID v7 for run and trace identifiers. This warning appears when passing custom IDs. Please use: from langsmith import uuid7\n",
+      "            id = uuid7()\n",
+      "Future versions will require UUID v7.\n",
+      "  input_data = validator(cls_, input_data)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La macroeconomía es la rama de la economía que analiza y estudia el comportamiento de la economía en su conjunto, en lugar de enfocarse en mercados individuales o sectores específicos. Se interesa en variables agregadas como el producto interno bruto (PIB), la tasa de desempleo, la inflación y el crecimiento económico. \n",
+      "\n",
+      "Al igual que cuidar de un jardín grande, donde cada planta representa un sector de la economía, la macroeconomía busca entender cómo interactúan todos estos elementos para asegurar un crecimiento saludable y sostenible. Los líderes y responsables de la política económica utilizan la macroeconomía para tomar decisiones que pueden afectar a todos los ciudadanos, buscando mejorar el bienestar general. Por ejemplo, pueden implementar políticas fiscales o monetarias para estimular la economía o controlar la inflación, con el objetivo de crear un entorno en el que todos puedan prosperar.\n"
+     ]
+    }
+   ],
    "source": [
-    "question = \"what is complexity economics?\"\n",
+    "question = \"Qué es la macroeconomía?\"\n",
     "print(eli5(question))"
    ]
   }
@@ -194,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
