--- a/eli5_types.ipynb
+++ b/eli5_types.ipynb
@@ -4,28 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tracing for Different Types of Runs"
+    "# Trazas para diferentes tipos de ejecuciones"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Types of Runs"
+    "### Tipos de Runs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LangSmith supports many different types of Runs - you can specify what type your Run is in the @traceable decorator. The types of runs are:\n",
+    "LangSmith admite muchos tipos diferentes de Runs. Podés especificar el tipo de Run en el decorador @traceable.\n",
+    "Los tipos de runs son:\n",
     "\n",
-    "- LLM: Invokes an LLM\n",
-    "- Retriever: Retrieves documents from databases or other sources\n",
-    "- Tool: Executes actions with function calls\n",
-    "- Chain: Default type; combines multiple Runs into a larger process\n",
-    "- Prompt: Hydrates a prompt to be used with an LLM\n",
-    "- Parser: Extracts structured data"
+    "- LLM: Invoca un modelo de lenguaje.\n",
+    "- Retriever: Recupera documentos desde bases de datos u otras fuentes.\n",
+    "- Tool: Ejecuta acciones mediante llamadas a funciones.\n",
+    "- Chain: Tipo por defecto; combina múltiples runs en un proceso más grande.\n",
+    "- Prompt: Inyecta un prompt para ser usado con un LLM.\n",
+    "- Parser: Extrae datos estructurados."
    ]
   },
   {
@@ -37,20 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You can set them inline!\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGSMITH_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGSMITH_TRACING\"] = \"true\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,13 +47,12 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Or you can use a .env file\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path=\".env\", override=True)"
    ]
@@ -74,48 +61,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LLM Runs for Chat Models"
+    "### Invocaciones a un LLM"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LangSmith provides special rendering and processing for LLM traces. In order to make the most of this feature, you must log your LLM traces in a specific format."
+    "LangSmith ofrece un renderizado y procesamiento especial para las trazas de LLM. Para aprovechar al máximo esta funcionalidad, tenés que registrar (loggear) tus trazas de LLM en un formato específico."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For chat-style models, inputs must be a list of messages in OpenAI-compatible format, represented as Python dictionaries or TypeScript object. Each message must contain the key role and content.\n",
+    "Para modelos de estilo chat, las entradas deben ser una lista de mensajes en formato compatible con OpenAI, representados como diccionarios de Python u objetos de TypeScript. Cada mensaje debe incluir las claves role y content.\n",
     "\n",
-    "The output is accepted in any of the following formats:\n",
+    "La salida puede estar en cualquiera de estos formatos:\n",
+    "- Un diccionario/objeto que tenga la clave choices, cuyo valor sea una lista de diccionarios/objetos. Cada uno debe contener la clave message, que corresponde a un objeto mensaje con role y content.\n",
+    "- Un diccionario/objeto que tenga la clave message, cuyo valor sea un objeto mensaje con role y content.\n",
+    "- Una tupla/arreglo de dos elementos, donde el primero es el role y el segundo es el content.\n",
+    "- Un diccionario/objeto que contenga directamente las claves role y content.\n",
+    "La entrada de tu función debe llamarse messages.\n",
     "\n",
-    "- A dictionary/object that contains the key choices with a value that is a list of dictionaries/objects. Each dictionary/object must contain the key message, which maps to a message object with the keys role and content.\n",
-    "- A dictionary/object that contains the key message with a value that is a message object with the keys role and content.\n",
-    "- A tuple/array of two elements, where the first element is the role and the second element is the content.\n",
-    "- A dictionary/object that contains the key role and content.\n",
-    "The input to your function should be named messages.\n",
-    "\n",
-    "You can also provide the following metadata fields to help LangSmith identify the model and calculate costs. If using LangChain or OpenAI wrapper, these fields will be automatically populated correctly.\n",
-    "- ls_provider: The provider of the model, eg \"openai\", \"anthropic\", etc.\n",
-    "- ls_model_name: The name of the model, eg \"gpt-4o-mini\", \"claude-3-opus-20240307\", etc."
+    "También podés proveer los siguientes metadatos para ayudar a LangSmith a identificar el modelo y calcular costos. Si usás LangChain o el wrapper de OpenAI, estos campos se completan automáticamente:\n",
+    "- ls_provider: el proveedor del modelo, por ejemplo \"openai\" o \"anthropic\".\n",
+    "- ls_model_name: el nombre del modelo, por ejemplo \"gpt-4o-mini\" o \"claude-3-opus-20240307\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'choices': [{'message': {'role': 'assistant',\n",
-       "    'content': 'Sure, what time would you like to book the table for?'}}]}"
+       "    'content': 'Claro, ¿para qué hora le gustaría reservar la mesa?'}}]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +110,8 @@
     "from langsmith import traceable\n",
     "\n",
     "inputs = [\n",
-    "  {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "  {\"role\": \"user\", \"content\": \"I'd like to book a table for two.\"},\n",
+    "  {\"role\": \"system\", \"content\": \"Sos un asistente servicial.\"},\n",
+    "  {\"role\": \"user\", \"content\": \"Me gustaría reservar una mesa para dos.\"},\n",
     "]\n",
     "\n",
     "output = {\n",
@@ -133,31 +119,30 @@
     "      {\n",
     "          \"message\": {\n",
     "              \"role\": \"assistant\",\n",
-    "              \"content\": \"Sure, what time would you like to book the table for?\"\n",
+    "              \"content\": \"Claro, ¿para qué hora le gustaría reservar la mesa?\"\n",
     "          }\n",
     "      }\n",
     "  ]\n",
     "}\n",
     "\n",
     "\n",
-    "# Can also use one of:\n",
+    "# También se puede usar uno de los siguientes:\n",
     "# output = {\n",
     "#     \"message\": {\n",
     "#         \"role\": \"assistant\",\n",
-    "#         \"content\": \"Sure, what time would you like to book the table for?\"\n",
+    "#         \"content\": \"Claro, ¿para qué hora le gustaría reservar la mesa?\"\n",
     "#     }\n",
     "# }\n",
     "#\n",
     "# output = {\n",
     "#     \"role\": \"assistant\",\n",
-    "#     \"content\": \"Sure, what time would you like to book the table for?\"\n",
+    "#     \"content\": \"Claro, ¿para qué hora le gustaría reservar la mesa?\"\n",
     "# }\n",
     "#\n",
-    "# output = [\"assistant\", \"Sure, what time would you like to book the table for?\"]\n",
+    "# output = [\"assistant\", \"Claro, ¿para qué hora le gustaría reservar la mesa?\"]\n",
     "\n",
     "@traceable(\n",
-    "  # TODO: Add an run_type=\"llm\"\n",
-    "    run_type=\"llm\"\n",
+    "  #  run_type=\"llm\"\n",
     ")\n",
     "def chat_model(messages: list):\n",
     "  return output\n",
@@ -169,25 +154,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retriever Runs + Documents"
+    "### Recuperación de documentos de bases de datos u otras fuentes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many LLM applications require looking up documents from vector databases, knowledge graphs, or other types of indexes. Retriever traces are a way to log the documents that are retrieved by the retriever. LangSmith provides special rendering for retrieval steps in traces to make it easier to understand and diagnose retrieval issues. In order for retrieval steps to be rendered correctly, a few small steps need to be taken.\n",
+    "Muchas aplicaciones de LLM necesitan buscar documentos en bases vectoriales, grafos de conocimiento u otros tipos de índices. Las retriever traces sirven para registrar los documentos que recupera el retriever. LangSmith ofrece un renderizado especial para estos pasos de recuperación dentro de las trazas, lo que facilita entender y diagnosticar problemas de búsqueda. Para que los pasos de recuperación se muestren correctamente, hay que seguir algunos pasos simples:\n",
     "\n",
-    "1. Annotate the retriever step with run_type=\"retriever\".\n",
-    "2. Return a list of Python dictionaries or TypeScript objects from the retriever step. Each dictionary should contain the following keys:\n",
-    "    - page_content: The text of the document.\n",
-    "    - type: This should always be \"Document\".\n",
-    "    - metadata: A python dictionary or TypeScript object containing metadata about the document. This metadata will be displayed in the trace."
+    "1. Anotar el paso del retriever con run_type=\"retriever\".\n",
+    "2. Devolver una lista de diccionarios de Python u objetos de TypeScript desde el paso del retriever.\n",
+    "Cada diccionario debe incluir:\n",
+    "    - page_content: el texto del documento.\n",
+    "    - type: siempre debe ser \"Document\".\n",
+    "    - metadata: un diccionario u objeto con metadatos sobre el documento, que se mostrará en la traza."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +190,7 @@
        "  'metadata': {'foo': 'bar'}}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,19 +202,19 @@
     "  return [\n",
     "      {\n",
     "          \"page_content\": r,\n",
-    "          \"type\": \"Document\",\n",
+    "          \"doc_type\": \"Document\"\n",
+    "          #\"type\": \"Document\",\n",
     "          \"metadata\": {\"foo\": \"bar\"}\n",
     "      }\n",
     "      for r in results\n",
     "  ]\n",
     "\n",
     "@traceable(\n",
-    "    # TODO: Add an run_type=\"retriever\"\n",
-    "    run_type=\"retriever\"\n",
+    "    #run_type=\"retriever\"\n",
     ")\n",
     "def retrieve_langsmith_docs(query):\n",
-    "  # Retriever returning hardcoded dummy documents.\n",
-    "  # In production, this could be a real vector datatabase or other document index.\n",
+    "  # Retriever que devuelve documentos de prueba hardcodeados.\n",
+    "  # En producción, esto podría ser una base de datos vectorial real u otro tipo de índice de documentos.\n",
     "  contents = [\"LangSmith Document contents 1\", \"LangSmith Document contents 2\", \"LangSmith Document contents 3\"]\n",
     "  return _convert_docs(contents)\n",
     "\n",
@@ -239,28 +225,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tool Calling"
+    "### Llamada a herramientas (tools) y Chains"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LangSmith has custom rendering for Tool Calls made by the model to make it clear when provided tools are being used."
+    "LangSmith tiene un renderizado especial para las Tool Calls realizadas por el modelo, para dejar claro cuándo se están utilizando las herramientas proporcionadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-CHaw5DGAczDPRnmdL5SXaL7QmJ7gH', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"I'm unable to provide real-time weather updates. However, you can easily check the current weather in New York City by using a weather website or app, such as the Weather Channel, AccuWeather, or a search engine.\", refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1758309593, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_560af6e559', usage=CompletionUsage(completion_tokens=45, prompt_tokens=79, total_tokens=124, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+       "ChatCompletion(id='chatcmpl-CdfooBhyveGCJETfbY1LFoaGJrHMP', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Lo siento, no puedo acceder a información en tiempo real sobre el clima. Te recomiendo que consultes una aplicación de clima o un sitio web confiable para obtener la información más actualizada sobre el clima en Buenos Aires.', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1763571578, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_560af6e559', usage=CompletionUsage(completion_tokens=44, prompt_tokens=92, total_tokens=136, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,11 +260,10 @@
     "openai_client = OpenAI()\n",
     "\n",
     "@traceable(\n",
-    "  # TODO: Add an run_type=\"tool\"\n",
     "    run_type=\"tool\"\n",
     ")\n",
     "def search_web(query: str):\n",
-    "    return f\"No result found for query: {query}\"\n",
+    "    return f\"No se encontró ningún resultado para la consulta: {query}\"\n",
     "\n",
     "@traceable(run_type=\"llm\")\n",
     "def call_openai(\n",
@@ -314,13 +299,13 @@
     "      \"type\": \"function\",\n",
     "      \"function\": {\n",
     "        \"name\": \"search_web\",\n",
-    "        \"description\": \"Search the web for a specific query\",\n",
+    "        \"description\": \"Buscar en la web una consulta específica\",\n",
     "        \"parameters\": {\n",
     "          \"type\": \"object\",\n",
     "          \"properties\": {\n",
     "            \"query\": {\n",
     "              \"type\": \"string\",\n",
-    "              \"description\": \"The query to search the web for\"\n",
+    "              \"description\": \"La consulta que se va a buscar en la web\"\n",
     "            }\n",
     "          },\n",
     "          \"required\": [\"query\"]\n",
@@ -329,8 +314,8 @@
     "    }\n",
     "]\n",
     "inputs = [\n",
-    "  {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "  {\"role\": \"user\", \"content\": \"What is the weather today in New York City?\"},\n",
+    "  {\"role\": \"system\", \"content\": \"Sos un asistente servicial.\"},\n",
+    "  {\"role\": \"user\", \"content\": \"Cómo está el clima hoy en Buenos Aires?\"},\n",
     "]\n",
     "\n",
     "respond(inputs, tools)"
@@ -346,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -360,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
